--- a/framework-star-css/_css/imports.css
+++ b/framework-star-css/_css/imports.css
@@ -49,11 +49,14 @@
 
    @import './_component/components/comp-alert.css';
    @import './_component/components/comp-badge.css';
+   @import './_component/components/comp-breadcrumb.css';
    @import './_component/components/comp-button.css';
    @import './_component/components/comp-card.css';
    @import './_component/components/comp-chips.css';
+   @import './_component/components/comp-dotnav.css';
    @import './_component/components/comp-form.css';
    @import './_component/components/comp-modal.css';
+   @import './_component/components/comp-pagination.css';
    @import './_component/components/comp-switch.css';
    @import './_component/components/comp-typography.css';
    
