ajuste da arquitetura e manutenção do spinner preload

--- a/framework-star-css/_css/_component/grid/layout-grid.css
+++ b/framework-star-css/_css/_component/grid/layout-grid.css
@@ -1,8 +1,8 @@
 /*!
- * Star CSS Grid v4.5.2 (https://getbootstrap.com/)
- * Copyright 2020-2021 The Gleisson Neves Authors
- * Copyright 2020-2021 , Inc.
+ * Star CSS v1.0.0 - Grid  
+ * Copyright 2020-2021 The Gleisson Neves (Authors)
  * Licensed under MIT 
+ * http://opensource.org/licenses/MIT
 */
  
 .container, .content
