--- a/framework-star-css/css/_element/reset.css
+++ b/framework-star-css/css/_element/reset.css
@@ -5,8 +5,8 @@
  * Licensed under MIT 
  * http://opensource.org/licenses/MIT
 */
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Press+Start+2P');
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 *:before, 
 *:after {
   -webkit-box-sizing: inherit;
@@ -30,7 +30,7 @@ time, mark, audio, video{
 	padding: 0;
   outline: 0;
   font-size:100%;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
 }
 
