--- a/framework-star-css/css/_component/comp-divider.css
+++ b/framework-star-css/css/_component/comp-divider.css
@@ -15,6 +15,14 @@ hr.divider-i {
 }
 
 hr.divider {
+    width: 100%;
+    height: 1px;
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom: 1px solid #d1d1d1;
+}
+
+hr.divider-sm {
     width: 100px;
     height: 1px;
     margin-left: auto;
