add content offcanvas

--- a/framework-star-css/css/_component/comp-offCanvas.css
+++ b/framework-star-css/css/_component/comp-offCanvas.css
@@ -4,6 +4,19 @@
  * Licensed under MIT 
  * http://opensource.org/licenses/MIT
 */
+.offcanvas{
+    width:var(--width-vw);
+    height:var(--height-vh);
+    position: fixed;
+    top:0px;
+    left:0px;
+    background-color: rgba(000, 000, 000, .5);
+    z-index: 1000;
+    display: block;
+    justify-content: center;
+    align-items: center;
+}
+
 .offcanvas-bar {
     position: absolute;    
     width: 360px;
