--- a/framework-star-css/css/_component/comp-typography.css
+++ b/framework-star-css/css/_component/comp-typography.css
@@ -10,7 +10,6 @@ h1, h2, h3, h4, h5, h6,
   margin-bottom: 0.5rem;
   font-weight: 300;
   line-height: 1.2;
-  color:#212121;
 }
 
 
@@ -63,3 +62,7 @@ h1, h2, h3, h4, h5, h6,
 .text-color-danger {color:var(--is_danger);}
 .text-color-dark {color:var(--is_dark);}
 .text-color-glitter {color:var(--is_glitter);}
+
+.bolder{
+   font-weight: bold;
+}
